--- a/index.html
+++ b/index.html
@@ -30,10 +30,20 @@
 
         <!-- Main Content -->
         <div class="flex-grow-1">
-        <header class="bg-primary text-white text-center p-5">
-            <h1>Your Reliable and Trusted Insurance Partner</h1>
-            <p>Protection meets peace of mind</p>
-        </header>
+            <header class="bg-primary text-white text-center p-5">
+                <div id="editableContent">
+                    <p>Protection meets peace of mind</p>
+                    <h1>Your Reliable and Trusted Insurance Partner</h1>
+                </div>
+                <button id="editBtn" class="btn btn-light mt-3">
+                 <img src="Edit_Icon.svg" alt="EditLogo">
+                    Edit Text
+                </button>
+            </header>
+            
+            <script src="script.js"></script>
+            
+
         <main class="container my-5">
             <section class="text-center">
             <h2 class="text-primary">Why Us?</h2>
