--- a/About.html
+++ b/About.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AC Prime Insurance</title>
+    <title>About page</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -15,13 +15,13 @@
                 <img src="AC_prime-Logo.png" alt="AC-primeLogo" width="150px">
             </h2>
             <ul class="nav flex-column gap-2">
-                <li class="nav-item"><a href="#" class="nav-link active"> <img src="house.svg" alt="Home_Icon"> Home</a></li>
-                <li class="nav-item"><a href="#" class="nav-link"><img src="info-circle.svg" alt="About_Icon"> About</a></li>
-                <li class="nav-item"><a href="#" class="nav-link"><img src="coin.svg" alt="Product_Icon"> Products</a></li>
-                <li class="nav-item"><a href="#" class="nav-link"><img src="card-checklist.svg" alt="Claims_Icon"> Claims</a></li>
-                <li class="nav-item"><a href="#" class="nav-link"><img src="briefcase.svg" alt="Careers_Icon"> Careers</a></li>
-                <li class="nav-item"><a href="#" class="nav-link"><img src="search.svg" alt="Insights_Icon"> Insights</a></li>
-                <li class="nav-item"><a href="#" class="nav-link"><img src="list-nested.svg" alt="VerHis_Icon"> Version History</a></li>
+                <li class="nav-item"><a href="/Home.html" class="nav-link active"> <img src="house.svg" alt="Home_Icon"> Home</a></li>
+                <li class="nav-item"><a href="/About.html" class="nav-link"><img src="info-circle.svg" alt="About_Icon"> About</a></li>
+                <li class="nav-item"><a href="/Products.html" class="nav-link"><img src="coin.svg" alt="Product_Icon"> Products</a></li>
+                <li class="nav-item"><a href="/Claims.html" class="nav-link"><img src="card-checklist.svg" alt="Claims_Icon"> Claims</a></li>
+                <li class="nav-item"><a href="/Career.html" class="nav-link"><img src="briefcase.svg" alt="Careers_Icon"> Careers</a></li>
+                <li class="nav-item"><a href="/Insights.html" class="nav-link"><img src="search.svg" alt="Insights_Icon"> Insights</a></li>
+                <li class="nav-item"><a href="/VersionHistory.html" class="nav-link"><img src="list-nested.svg" alt="VerHis_Icon"> Version History</a></li>
             </ul>
         </div>
 
