--- a/Home.html
+++ b/Home.html
@@ -29,6 +29,16 @@
         <div class="flex-grow-1">
             <header>
                 <!-- Welcome to AC Prime Insurance -->
+                <div class="file-upload-wrapper">
+                    <label for="fileInput" class="custom-file-button" ><img src="pencil-square.svg" alt="Edit_Icon"> Edit Image</label>
+                    <input type="file" id="fileInput">
+                    <!-- <span id="fileName">No file chosen</span> -->
+                </div>
+            
+                <div id="fileDisplay">
+                    <img id="preImage" src="TestDisplay.png" alt="Pre-existing file">
+                </div>
+            
             </header>            
             <main class="container my-5">
                 <section class="text-center">
