--- a/Home.html
+++ b/Home.html
@@ -43,6 +43,12 @@
             <main class="container my-5">
                 <section class="text-center">
                     <!-- Content Goes Here -->
+                     <div class = "Section_1">
+                        <div class="Contents">
+
+                            <p>TThis is a test</p>
+                            </div>
+                     </div>
 
 
 
