--- a/Home.html
+++ b/Home.html
@@ -45,17 +45,18 @@
                 <div class="container mt-5">
                     <div class="row">
                         <div class="col">
-                            <h3>Column 1</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
-                            <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
+                           
+                            <p>Why Us?</p>
+                            <h3>You’re the boss.</h3>
+                            <p>As an insurance broker, we work exclusively for you, ensuring that all our recommendations are unbiased and aligned with your best interests. Our commitment to objectivity allows us to thoroughly search the market and find the most competitively priced products tailored to your specific needs, so you can confidently make the best decisions for your financial security</p>
                         </div>
                         <div class="col position-relative">
-                            <div id="fileDisplay" class="text-center">
+                            <div id="fileDisplay2" class="text-center">
                                 <img id="preImage2" src="two guys talking.png" alt="Pre-existing file" class="img-fluid">
-                                <label for="fileInput" class="second d-inline-flex align-items-center">
+                                <label for="fileInput2" class="second d-inline-flex align-items-center">
                                     <img src="pencil-square.svg" alt="Edit Icon" class="me-2"> Edit Image
                                 </label>
-                                <input type="file" id="fileInput" class="d-none">
+                                <input type="file" id="fileInput2" class="d-none">
                             </div>
                         </div>
                     </div>
