--- a/Home.html
+++ b/Home.html
@@ -75,6 +75,39 @@
                 <div class="mt-3">
                     <button id="saveBtn" class="btn btn-primary" style="display: none;">Save</button>
                 </div>
+
+                <!-- Editable 4 column -->
+                <div class="container">
+                    <div class="buttons">
+                        <button onclick="addElement()" class="add-btn">➕ Add Element</button>
+                        <button onclick="removeElement()" class="remove-btn">❌ Remove Element</button>
+                    </div>
+            
+                    <div id="elements-container" class="grid-container">
+                        <div class="element">
+                            <span class="number">01</span>
+                            <h3 contenteditable="true">Dedicated Service</h3>
+                            <p contenteditable="true">You are provided with a dedicated team...</p>
+                        </div>
+                        <div class="element">
+                            <span class="number">02</span>
+                            <h3 contenteditable="true">Best Products with the Least Cost</h3>
+                            <p contenteditable="true">By consolidating and negotiating...</p>
+                        </div>
+                        <div class="element">
+                            <span class="number">03</span>
+                            <h3 contenteditable="true">One-Stop Shop for Financial Needs</h3>
+                            <p contenteditable="true">From life protection to investment...</p>
+                        </div>
+                        <div class="element">
+                            <span class="number">04</span>
+                            <h3 contenteditable="true">Expert Guidance and Advice</h3>
+                            <p contenteditable="true">Our team offers expert guidance...</p>
+                        </div>
+                    </div>
+                </div>
+
+
             </main>
         </div>
     </div>
