--- a/Home.html
+++ b/Home.html
@@ -102,8 +102,8 @@
                     
                     <!-- Add / Remove Element Buttons -->
                     <div class="buttons">
-                        <button onclick="addElement()" class="add-btn">➕ Add Element</button>
-                        <button onclick="removeElement()" class="remove-btn">❌ Remove Element</button>
+                        <button onclick="addElement()" class="add-btn"><img src="plus-circle.svg"> Add Element</button>
+                        <button onclick="removeElement()" class="remove-btn"> <img src="dash-circle.svg"> Remove Element</button>
                     </div>
             
                     <!-- Editable Feature Blocks -->
